style.css
body{
	margin: 0;
}

.animation-box{
	background-color: black;
	width: 100%;
	height: 2em;
	letter-spacing: 0.5em;
	top: 24em;
	overflow: hidden;
	position: absolute;
}

.animation-text{
	position: relative;
	white-space: nowrap;
	margin-bottom: 0;
	animation-duration: 7s;
	animation-iteration-count: infinite;
	animation-timing-function: linear;
	animation-direction: reverse;
}

.a1{
	animation-name: a1;
	margin-top: 0.7em;
	overflow: hidden;
}

.a2{
	animation-name: a2;
	animation-delay: 3s;
	color: black;
	bottom: 2em;
}

@keyframes a1{
	0% {left: -50%;}
	100% {left: 100%;}
}

@keyframes a2{
	0% {left: -50%; color: white;}
	100% {left: 100%; color: white;}
}

@font-face{
	font-family: "dudu-font";
	src: url("dudu-font.TTF");
}

p{
	font-family: dudu-font;
	font-size: 0.9em;
	color: white;
}

.logo-container{
	text-align: center;
	margin-top: 3em;
}

.logo-container img{
	height: 3em;
}

.hero {
	display: flex;
	text-align: center;
	justify-content: center;
}

@media (max-width: 768px){
	.hero {
		display: block;
	}
}


.hero div{
	margin: 1em;
}

.hero-img{
	width: 100%;
	height: 90%;
}

.img-text{
	bottom: 6em;
	position: relative;
	letter-spacing: 1em;
	font-size: 1em;
}

.info{
	text-align: center;
	font-weight: bold;
	letter-spacing: 1em;
	margin-bottom: 6em;
	margin-top: 6em;
}

.info p{
	color: black;
}

.info p:first-child{
	font-size: 1.5em;
	margin-top: 0;
}

.info p:nth-child(0n+2){
	font-size: 1.25em;
}

.info p:last-child{
	font-size: 0.8em;
	letter-spacing: 0.8em;
}

.extra-info{
	text-align: center;
	margin-top: 6em;
}

.extra-info div{
	margin-top: 6em;
}

.float{
	position:fixed;
	width:60px;
	height:60px;
	bottom:40px;
	right:40px;
	background-color:black;
	color:#FFF;
	border-radius:50px;
	text-align:center;
  font-size:30px;
	box-shadow: 2px 2px 3px #999;
  z-index:100;
}

.my-float{
	margin-top:16px;
}

.float-text{
	font-size: 1em;
	z-index:99;
}

.center{
	text-align: center;
}

.mb-2{
	margin-bottom: 2em;
}

.cf-sign{
	color: black;
	position: absolute;
	right: 4em;
}

